add new endpoint and add a openapi breaking check
